# manual-works-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/manual_works_mcp/: api_client.py  server.py
