[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manual-works-mcp"
version = "0.1.0"
description = "MCP server for ManualWorks document search"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "mcp[cli]",
    "httpx",
]

[project.scripts]
manual-works-mcp = "manual_works_mcp.server:main"
